resources/css/style.css
/*======= Remove default styles by the browser =========*/
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-family: "Helvetica", sans-serif;
  font-size: 1.375rem;
  color: seashell;
  background-color: #000;
  opacity: 0.9;
  text-align: center;
}
p {
}
@media only screen and (max-width: 700px) {
  body {
    font-size: 1.1rem;
    line-height: 2;
  }
}
@media only screen and (max-width: 480px) {
  nav a {
    font-size: 0.9rem;
    display: none;
  }
}

/* Nav Bar */
nav {
  border-bottom: 1px solid #fff5ee;
  width: 100%;
  height: 4.3125rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #000;
}

nav img {
  height: 3.125rem;
  margin-left: 10px;
}
nav ul {
  margin-right: 40px;
}
nav li {
  display: inline-block;
}
nav li:not(:last-child) {
  margin-right: 10px;
}

nav a,
nav a:active,
nav a:link {
  color: #fff5ee;
}
nav a:hover {
  color: #ffccaa;
}

/* Hero Banner Header */

#banner {
  width: 90%;
  height: 43.75rem;

  background-image: url("../images/img-mission-background.jpeg");
  margin: 0 auto;
  background-size: cover;
  background-position: center;
  margin-top: 4.3125rem;
  margin-bottom: 8rem;
  display: flex;
  /* flex-direction: column; */
  align-items: center;
  /* justify-content: space-around; */
}
.banner__heading {
  background-color: black;
  width: 100%;
  padding: 20px;
}
.banner__heading h2 {
  font-size: 2rem;
}
.banner__heading h2,
.banner__heading h4 {
  margin: 10px;
}

/* First Section */

#tea-month {
  width: 80%;
  margin: 50px auto;
}
h2,
h4 {
  margin: 30px 0;
}
.container {
  /* width: 100%; */
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
.items {
  margin-bottom: 30px;
}

.items span {
  display: block;
}
.items img {
  width: 300px;
  height: 200px;
  flex-grow: 2;
  margin-bottom: 10px;
}

/* Locations section */
#locations {
  width: 90%;
  height: 100%;
  padding: 20px;
  padding-bottom: 70px;
  margin: 0 auto;
  background-image: url("../images/img-locations-background.jpeg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
#locations h2 {
  margin-bottom: 15px;
}
.flex-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: stretch;
}
.location {
  background-color: #000;
  padding: 10px;
  margin: 5px 20px;
  display: flex;
  flex-direction: column;
  flex-basis: 280px;
  justify-content: center;
  opacity: 1;
}
.location h3 {
  display: block;
  font-size: 1.17em;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}
.location p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

/* Contact Section */
#contact {
  height: 200px;
  margin: 10px auto;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
#contact h2,
h5 {
  margin: 0;
}

/*
    Footer section
*/
#footer {
  padding: 30px 15px;
}
#footer p {
  text-align: left;
  margin-left: 20px;
}

